opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_here"
bug-reports: "https://github.com/janestreet/ppx_here/issues"
dev-repo: "git+https://github.com/janestreet/ppx_here.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_here" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_core"
  "ppx_driver"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Expands [%here] into its location

Part of the Jane Street's PPX rewriters collection.
"
